-Changed my button names on html - Added custom styles to buttons

--- a/Module_5R_StudentNo_Classcode_Group_Name-Surname_SDF05R-main/Module_5R_StudentNo_Classcode_Group_Name-Surname_SDF05R-main/index.html
+++ b/Module_5R_StudentNo_Classcode_Group_Name-Surname_SDF05R-main/Module_5R_StudentNo_Classcode_Group_Name-Surname_SDF05R-main/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>✨ Style Your Buttons ✨</h1>
     <p>Apply custom styles to your button in the Style.css file</p>
-    <button class="custom-btn btn-1">Click Here</button>
-    <button class="custom-btn btn-2">Click Here</button>
-    <button class="custom-btn btn-3">Click Here</button>
+    <button class="custom-btn btn-1">Hello!</button>
+    <button class="custom-btn btn-2">Read more!</button>  
+    <button class="custom-btn btn-3">Goodbye!</button>  
 </body>
 </html>
